--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </li>
           <li class="nav__item">
             <a
-              class="nav__link nav__link--btn btn btn-primary show-modal"
+              class="btn btn-primary nav__link nav__link--btn show-modal"
               href="#"
               >Open account</a
             >
