--- a/index.html
+++ b/index.html
@@ -292,16 +292,12 @@
           </div>
         </div>
 
-        <!-- <div class="slide"><img src="/assets/img/img-1.jpg" alt="Photo 1" /></div>
-        <div class="slide"><img src="/assets/img/img-2.jpg" alt="Photo 2" /></div>
-        <div class="slide"><img src="/assets/img/img-3.jpg" alt="Photo 3" /></div>
-        <div class="slide"><img src="/assets/img/img-4.jpg" alt="Photo 4" /></div> -->
-        <button class="slider__btn slider__btn--left">
+        <button class="slider__btn --left">
           <svg>
             <use xlink:href="/assets/img/icons.svg#arrow"></use>
           </svg>
         </button>
-        <button class="slider__btn slider__btn--right">
+        <button class="slider__btn --right">
           <svg>
             <use xlink:href="/assets/img/icons.svg#arrow"></use>
           </svg>
