--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" href="/assets/img/favicon.svg" type="image/svg+xml" />
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="/assets/animate.css" />
+    <link rel="stylesheet" href="/assets/style.css" />
     <title>The Bankist | When Banking meets Minimalist</title>
+    <script defer src="/assets/script.js"></script>
   </head>
   <body>
     <header class="header">
@@ -221,7 +223,7 @@
       </div>
 
       <div class="slider">
-        <div class="slide slide--1">
+        <div class="slide">
           <div class="testimonial">
             <address class="testimonial__author">
               <img
@@ -243,7 +245,7 @@
           </div>
         </div>
 
-        <div class="slide slide--2">
+        <div class="slide">
           <div class="testimonial">
             <address class="testimonial__author">
               <img
@@ -268,7 +270,7 @@
           </div>
         </div>
 
-        <div class="slide slide--3">
+        <div class="slide">
           <div class="testimonial">
             <address class="testimonial__author">
               <img
@@ -302,8 +304,8 @@
             <use xlink:href="/assets/img/icons.svg#arrow"></use>
           </svg>
         </button>
-        <div class="dots"></div>
       </div>
+      <div class="dots"></div>
     </section>
 
     <section class="section section--sign-up">
@@ -350,7 +352,7 @@
       </ul>
     </footer>
 
-    <div class="modal hidden">
+    <div class="modal signup animate__animated">
       <button class="close-modal">
         <svg>
           <use xlink:href="/assets/img/icons.svg#cross"></use>
@@ -362,26 +364,74 @@
         class="modal__logo"
       />
       <h2 class="modal__header">
-        Open a BANKIST account <br />
-        in <span>an eye blink</span>.
+        Open a BANKIST account in <span>an eye blink</span>.
       </h2>
       <form class="modal__form">
-        <label>Display name</label>
-        <input type="text" placeholder="ex: Tung Nguyen" />
-        <label>Username</label>
-        <input type="text" placeholder="ex: tungns" />
-        <label>Password</label>
-        <input type="password" placeholder="minimum 6 numbers" min="6" />
-        <button class="btn btn-primary">
-          Next step
-          <svg>
-            <use xlink:href="/assets/img/icons.svg#arrow"></use>
-          </svg>
-        </button>
+        <div class="form-control">
+          <label>Display name</label>
+          <input type="text" placeholder="ex: Tung Nguyen" />
+        </div>
+        <div class="form-control">
+          <label>Username</label>
+          <input type="text" placeholder="ex: tungns" />
+        </div>
+        <div class="form-control">
+          <label>Create PIN</label>
+          <input
+            type="password"
+            placeholder="enter a minimum 4 number"
+            min="4"
+          />
+        </div>
+        <div class="form-control">
+          <label>Confirm PIN</label>
+          <input type="password" placeholder="re-enter your PIN" min="4" />
+        </div>
+        <div class="form-control">
+          <button class="btn btn-primary">
+            Register
+            <svg>
+              <use xlink:href="/assets/img/icons.svg#arrow"></use>
+            </svg>
+          </button>
+        </div>
       </form>
+      <p>Already have an account? <a class="switch" href="#">Login</a></p>
+    </div>
+    <div class="modal login animate__animated">
+      <button class="close-modal">
+        <svg>
+          <use xlink:href="/assets/img/icons.svg#cross"></use>
+        </svg>
+      </button>
+      <img
+        src="/assets/img/the-bankist.svg"
+        alt="Bankist logo"
+        class="modal__logo"
+      />
+      <h2 class="modal__header">
+        Access your BANKIST account in <span>an eye blink</span>.
+      </h2>
+      <form class="modal__form">
+        <div class="form-control">
+          <label>Username</label>
+          <input type="text" placeholder="ex: tungns" />
+        </div>
+        <div class="form-control">
+          <label>Your PIN</label>
+          <input type="password" placeholder="enter your PIN" min="4" />
+        </div>
+        <div class="form-control">
+          <button class="btn btn-primary">
+            Login
+            <svg>
+              <use xlink:href="/assets/img/icons.svg#arrow"></use>
+            </svg>
+          </button>
+        </div>
+      </form>
+      <p>Don't have an account? <a class="switch" href="#">Sign-up</a></p>
     </div>
     <div class="overlay hidden"></div>
-
-    <script src="/assets/script.js"></script>
   </body>
 </html>
